# local-rag

./: .gitignore  README.md  pyproject.toml
src/data/documents/: file.md
src/local_rag/: __init__.py
src/notebook/: dev.ipynb
