[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "langchain>=0.3.9",
    "chromadb>0.4.0",
    "chainlit>=1.3.2",
    "pip>=24.3.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.8",
    "unstructured[md]>=0.16.8",
    "sentence-transformers>=3.3.1",
    "tqdm>=4.67.1",
    "chroma-migrate>=0.0.7",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag"]
